--- a/index.html
+++ b/index.html
@@ -357,5 +357,7 @@ app.listen(3000);
 
     </script>
 
+<a href="https://github.com/tjanczuk/edge"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>    
+
   </body>
 </html>
