twitter button, fixed

--- a/index.html
+++ b/index.html
@@ -359,8 +359,9 @@ app.listen(3000);
 
 <a href="https://github.com/tjanczuk/edge"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>    
 
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tjanczuk.github.com/edge" data-text="Run node.js and .NET code in-process with edge.js" data-via="tjanczuk" data-hashtags="edgejs" style="position: absolute; top: 20px; left: 20px; border: 0;">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<iframe allowtransparency="true" frameborder="0" scrolling="no"
+        src="https://platform.twitter.com/widgets/tweet_button.html?url=http://tjanczuk.github.com/edge&via=tjanczuk&text=Run node.js and .NET code in-process with edge.js&count=horizontal&hashtags=edgejs"
+        style="width:130px; height:20px; position: absolute; top: 20px; left: 20px; border: 0;"></iframe>
 
 <script type="text/javascript">
 
