--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@ c:\projects\edgedemo> node sample.js
 .NET welcomes Node.js
             </code></pre>                  
           </section>
+          <section>
+            <h2>Interop model</h2>
+            <p><small>Async, in-process convention of calls between .NET and node.js</small></p>
+             <img src="https://f.cloud.github.com/assets/822369/234085/b305625c-8768-11e2-8de0-e03ae98e7249.PNG" alt="edge.js interop model" /> 
+          </section>          
         </section>
         <section>
           <h2>C# grows multi-line</h2>
@@ -310,7 +315,7 @@ app.listen(3000);
           <p><small>Integrate with ASP.NET authentication &#9670; Public key cryptography &#9670; Get X.509 certificates from certificate store &#9670; Access camera, microphone, and speakers &#9670; Print documents &#9670; Write to Event Log &#9670; Use Event Tracing for Windows 
             &#9670; Bridge to nuget package manager &#9670; Interact with external services using SOAP and WCF &#9670; Active Directory &#9670; Call services that require Windows authentication &#9670; Access MS SQL &#9670; Implement CPU-bound workers &#9670; Process images
           </small></p>
-          <p><small>...
+          <p><small>and more ...
           </small></p>          
         </section>         
 
