--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ app.listen(3000);
             <small>Created by <a href="http://tomasz.janczuk.org">Tomasz Janczuk</a> / <a href="http://twitter.com/tjanczuk">@tjanczuk</a></small>
           </p>          
           <p>
-            <small><a href="https://githu.com/tjanczuk.edge">github.com/tjanczuk/edge</a></small>
+            <small><a href="https://github.com/tjanczuk/edge">github.com/tjanczuk/edge</a></small>
           </p>
 
           <p>
