--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ hello('Node.js', function (error, result) {
   console.log(result);
 });
             </code></pre>     
+            <a href="https://github.com/tjanczuk/edge/blob/master/samples/101_hello_lambda.js"><small>see full code</small></a>
             <pre><code>
 c:\projects\edgedemo> node sample.js
 .NET welcomes Node.js
@@ -98,18 +99,19 @@ var hello = require('edge').func(function () {/*
 
 hello('Node.js', function (error, result) { ... });
             </code></pre>         
+            <a href="https://github.com/tjanczuk/edge/blob/master/samples/102_hello_function.js"><small>see full code</small></a>
         </section>
 
         <section>
           <h2>C# in its own file</h2>
           <p><small>Call C# in a file from node.js</small></p>        
-          <p><small>sample.js:</small></p>    
+          <p><a href="https://github.com/tjanczuk/edge/blob/master/samples/103_hello_file.js"><small>sample.js:</small></a></p>    
             <pre><code>
 var hello = require('edge').func('hello.csx');
 
 hello('Node.js', function (error, result) { ... });
             </code></pre> 
-            <p><small>hello.csx:</small></p>
+            <p><a href="https://github.com/tjanczuk/edge/blob/master/samples/103_hello_file.csx"><small>hello.csx:</small></a></p>
             <pre><code>
 async (input) => { return ".NET welcomes " + input.ToString(); }
             </code></pre>                   
@@ -131,18 +133,19 @@ var add7 = require('edge').func(function () {/*
 
 add7(12, function (error, result) { ... });
           </code></pre>
+          <a href="https://github.com/tjanczuk/edge/blob/master/samples/104_add7_class.js"><small>see full code</small></a>
         </section>
 
         <section>
           <h2>CLR class libraries</h2>
           <p><small>Invoke a method of a C# class from a DLL</small></p>
-          <p><small>sample.js:</small></p>
+          <p><a href="https://github.com/tjanczuk/edge/blob/master/samples/105_add7_dll.js"><small>sample.js:</small></a></p>
           <pre><code>
 var add7 = require('edge').func('My.Sample.dll');
 
 add7(12, function (error, result) { ... }
           </code></pre>
-          <p><small>sample.cs:</small></p>
+          <p><a href="https://github.com/tjanczuk/edge/blob/master/samples/Sample105.cs"><small>sample.cs:</small></a></p>
           <pre><code>
 using System.Threading.Tasks;
 
@@ -174,6 +177,7 @@ var payload = {
 
 hello(payload, function (error, result) { ... });
           </code></pre>         
+          <a href="https://github.com/tjanczuk/edge/blob/master/samples/106_marshal_v82clr.js"><small>see full code</small></a>
         </section>        
 
         <section>
@@ -196,6 +200,7 @@ var getData = require('edge').func(function () {/*
 
 getData(null, function (error, result) { ... });
           </code></pre>         
+          <a href="https://github.com/tjanczuk/edge/blob/master/samples/107_marshal_clr2v8.js"><small>see full code</small></a>
         </section>    
 
         <section>
@@ -214,6 +219,7 @@ var payload = {
 
 addAndMultiplyBy2(payload, function (error, result) { ... });
           </code></pre>         
+          <a href="https://github.com/tjanczuk/edge/blob/master/samples/108_func.js"><small>see full code</small></a>
         </section>              
 
         <section>
@@ -232,6 +238,7 @@ var addAndMultiplyBy2 = require('edge').func(function () {/*
   }
 */});
           </code></pre>         
+          <a href="https://github.com/tjanczuk/edge/blob/master/samples/108_func.js"><small>see full code</small></a>
         </section>              
 
         <section>
@@ -249,6 +256,7 @@ sql('select top 2 * from Products', function (error, result) {
   console.log(result);
 });            
          </code></pre>
+         <a href="https://github.com/tjanczuk/edge/blob/master/samples/202_sql.js"><small>see full code</small></a>
         </section>     
 
         <section>
@@ -271,6 +279,7 @@ public class Startup {
         using (var reader = await command.ExecuteReaderAsync() {
     ...
          </code></pre>
+         <a href="https://github.com/tjanczuk/edge/blob/master/samples/202_sql.csx"><small>see full code</small></a>
         </section>             
 
         <section>
@@ -290,13 +299,14 @@ var heavyLifting = require('edge').func(function () {/*
 
 heavyLifting('Node.js', function (error, result) { ... });
          </code></pre>
+         <a href="https://github.com/tjanczuk/edge/blob/master/samples/201_worker.js"><small>see full code</small></a>
         </section>    
 
         <section>
           <h2>Express.js handler in C#</h2>
           <p><small>Plug in .NET OWIN apps as connect middleware or express handlers</small></p>
           <pre><code class="javscript">
-var oedge = require('edge-express')
+var edge = require('edge-express')
     , express = require('express');
 
 var app = express();
@@ -309,6 +319,40 @@ app.get('/node', function (req, res) {
 app.listen(3000);
          </code></pre>
         </section>          
+
+        <section>
+          <h2>Call legacy SOAP services from node.js</h2>
+          <p><small>Use WCF to call SOAP services</small></p>
+          <pre><code class="javscript">
+var edge = require('edge');
+
+var kg2pound = edge.func('soap.csx');
+
+kg2pound(123, function (error, result) { ... });
+         </code></pre>
+         <a href="https://github.com/tjanczuk/edge/blob/master/samples/205_soap.js"><small>see full code</small></a>
+        </section>
+
+        <section>
+          <h2>Call legacy SOAP services from node.js, continued</h2>
+          <p><small>Use WCF proxy to call a SOAP service; soap.csx:</small></p>
+          <pre><code class="c#">
+// ...
+
+public class Startup {
+    public async Task&lt;object&gt; Invoke(double kilograms) {
+        var client = new ConvertWeightsSoapClient(
+            new BasicHttpBinding(),
+            new EndpointAddress(
+                "http://www.webservicex.net/ConvertWeight.asmx"));
+
+        return await client.ConvertWeightAsync(
+              kilograms, WeightUnit.Kilograms, WeightUnit.PoundsTroy);
+    }
+}
+         </code></pre>
+         <a href="https://github.com/tjanczuk/edge/blob/master/samples/205_soap.csx"><small>see full code</small></a>
+        </section>     
 
         <section>
           <h2>What will you build?</h2>
