--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
           <p>&nbsp;</p>
           <p>
             <small>Created by <a href="http://tomasz.janczuk.org">Tomasz Janczuk</a> / <a href="http://twitter.com/tjanczuk">@tjanczuk</a></small>
-          </p>          
+          </p>  
+          <p>&nbsp;</p>
+          <p>
+            <small>(Use space or arrow keys to navigate)</small>
+          </p>                    
         </section>
 
         <section>
