--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section>
             <h2>Edge.js connects</h2>
             <p><small>24k+ npm modules with 11k+ nuget packages</small></p>
-            <p><small>JavaScript with C#</small></p>
+            <p><small>JavaScript with C# with Python</small></p>
             <p><small>loose typing with strong typing</small></p>
             <p><small>IO-bound single threaded with CPU-bound multi-threaded</small></p>
             <p><small>cool with awesome</small></p>
@@ -64,7 +64,7 @@
         </section>
 
         <section>
-          <h2>.NET welcomes Node.js</h2>
+          <h2>C# welcomes Node.js</h2>
           <p><small>Call C# async lambda from node.js</small></p>
           <pre><code>
 var edge = require('edge');
@@ -86,8 +86,33 @@ c:\projects\edgedemo> node sample.js
         </section>
 
         <section>
+          <h2>Python welcomes Node.js</h2>
+          <p><small>Script IronPython from node.js</small></p>
+          <pre><code>
+var edge = require('edge');
+
+var hello = edge.func('py', function () {/*
+    def hello(input):
+        return "Python welcomes " + input
+
+    lambda x: hello(x)
+*/});
+
+hello('Node.js', function (error, result) {
+    if (error) throw error;
+    console.log(result);
+});
+          </code></pre>     
+          <a href="https://github.com/tjanczuk/edge#how-to-script-python-in-a-nodejs-application"><small>how to python in node.js</small></a>
+          <pre><code>
+c:\projects\edgedemo> node sample.js
+Python welcomes Node.js
+          </code></pre>                  
+        </section>
+
+        <section>
           <h2>Interop model</h2>
-          <p><small>Async, in-process calling convention between .NET and node.js</small></p>
+          <p><small>Async, in-process calling convention between CLR and node.js</small></p>
            <img src="https://f.cloud.github.com/assets/822369/234085/b305625c-8768-11e2-8de0-e03ae98e7249.PNG" alt="edge.js interop model" /> 
         </section>          
 
