--- a/index.html
+++ b/index.html
@@ -392,6 +392,30 @@ heavyLifting('Node.js', function (error, result) { ... });
         </section>    
 
         <section>
+          <h2>ZIP compression</h2>
+          <p><small>Compress files and folders using .NET 4.5 ZIP compression</small></p>
+          <pre><code class="javscript">
+var zip = require('edge').func(function() {/*
+  class Startup {
+    public async Task&lt;object&gt; Invoke(IDictionary&lt;string,object&gt; p) {
+      await Task.Run(async () => {
+        System.IO.Compression.ZipFile.CreateFromDirectory(
+          (string)p["src"], (string)p["dest"]);
+      });
+      return null;
+    }
+  }
+*/});
+
+zip({ src: '..\\mydir', dest: '..\\mydir.zip' }, function (error) { 
+  ...
+});
+         </code></pre>
+         <a href="https://github.com/tjanczuk/edge/blob/master/samples/207_zip.js"><small>see full code</small></a>
+        </section>          
+
+
+        <section>
           <h2>Express.js handler in C#</h2>
           <p><small>Plug in .NET OWIN apps as connect middleware or express handlers</small></p>
           <pre><code class="javscript">
