--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ public class Startup {
 <a href="https://github.com/tjanczuk/edge"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>    
 
 <iframe allowtransparency="true" frameborder="0" scrolling="no"
-        src="https://platform.twitter.com/widgets/tweet_button.html?url=http://tjanczuk.github.com/edge&via=tjanczuk&text=Run node.js and .NET code in-process with edge.js&count=horizontal&hashtags=edgejs"
+        src="https://platform.twitter.com/widgets/tweet_button.html?url=http://tjanczuk.github.io/edge/&via=tjanczuk&text=Run node.js and .NET code in-process with edge.js&count=horizontal&hashtags=edgejs"
         style="width:130px; height:20px; position: absolute; top: 20px; left: 20px; border: 0;"></iframe>
 
 <script type="text/javascript">
