--- a/index.html
+++ b/index.html
@@ -405,7 +405,14 @@ console.log(counter(null, true)); // prints 13
 console.log(counter(null, true)); // prints 14
           </code></pre>         
           <a href="https://github.com/tjanczuk/edge/blob/master/samples/110_clr_instance.js"><small>see full example</small></a>
-        </section>   
+        </section>
+
+        <section>
+          <h2>Performance</h2>
+          <p><small>Latency of edge.js call is 32x smaller than localhost, cross-process call over HTTP</small></p>
+          <img src="https://f.cloud.github.com/assets/822369/486393/645f696a-b920-11e2-8a20-9fa6932bb092.png" alt="performance of edge.js" /> 
+          <p><a href="https://github.com/tjanczuk/edge/wiki/Performance"><small>details</small></a></p>
+        </section>
 
         <section>
           <h2>Let's build something...</h2>
